Use new language features and reduce idea warnings